<resources>
    <string name="app_name">HIT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_txt">ENTER</string>
    <string name="terms_txt">I agree to Terms &amp; Conditions</string>
    <string name="device_pair_success_txt">The selected device is associated with the player</string>
    <string name="device_pair_error_txt">This device is already associated to a user. Please select different device from the list.</string>
    <string name="enable_bluetooth_txt">The application requires to turn on your bluetooth</string>
    <string name="enable_location_txt">The application requires to turn on your location</string>

    <string name="channel_name">HIT</string>
    <string name="channel_description">HIT Notification</string>
    <string name="access_through">Access through</string>
    <string name="or">OR</string>
    <string name="login">Login</string>
    <string name="profile_creating">Profile creating</string>
    <string name="profile_creation">profile creation</string>
    <string name="add_profile_picture">Add Profile Picture</string>
    <string name="tap_icon_to_change">( Tap Icon to Change )</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter name</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="age">Age</string>
    <string name="enter_age">Enter age</string>
    <string name="gender">Gender</string>
    <string name="loginDash"><![CDATA[Login >>]]></string>
    <string name="for_email_link">for email link</string>
    <string name="here">&#160;here&#160;</string>
    <string name="forgotten_username_or_password_click">forgotten Username or Password Click</string>
    <string name="agree_to_terms_amp_conditions"><![CDATA[Agree to Terms & Conditions *]]></string>
    <string name="view">View</string>
    <string name="connect">Connect</string>
    <string name="emergency_contact_info">Emergency Contact Info</string>
    <string name="contect_number">Contact Number</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="complete_profile_creation"><![CDATA[Complete Profile Creation >>]]></string>
    <string name="submit">Submit</string>
    <string name="sport">Sport</string>

</resources>