<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:paddingTop="@dimen/space_large">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/space_small"
        android:padding="12dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:src="@drawable/logo_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:paddingHorizontal="@dimen/space_extra_large"
            android:paddingBottom="@dimen/space_large"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo">

            <TextView
                android:id="@+id/tvAlthough"
                style="@style/text_extra_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/space_large"
                android:text="@string/profile_creation"
                android:textAllCaps="true"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivAvatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:layout_marginEnd="@dimen/space_large"
                android:src="@drawable/ic_profile"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAlthough" />

            <TextView
                android:id="@+id/tvProfileTitle"
                style="@style/text_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_large"
                android:text="@string/add_profile_picture"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ivAvatar" />

            <TextView
                android:id="@+id/tv_profileTitleDummy"
                style="@style/text_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tap_icon_to_change"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintBottom_toBottomOf="@+id/ivAvatar"
                app:layout_constraintEnd_toEndOf="@+id/tvProfileTitle"
                app:layout_constraintStart_toStartOf="@+id/tvProfileTitle" />

            <TextView
                android:id="@+id/tvName"
                style="@style/text_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/space_medium"
                android:text="@string/name"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_profileTitleDummy" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etName"
                style="@style/et_primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:hint="@string/enter_name"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/tvName" />

            <TextView
                android:id="@+id/tvEmail"
                style="@style/text_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/space_medium"
                android:text="@string/email"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etName" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmail"
                style="@style/et_primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:hint="@string/enter_email"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

            <TextView
                android:id="@+id/tvAge"
                style="@style/text_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/space_medium"
                android:text="@string/age"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etAge"
                style="@style/et_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:background="@drawable/bg_et_primary"
                android:hint="@string/enter_age"
                android:paddingStart="@dimen/space_medium_large"
                android:paddingEnd="@dimen/space_medium_large"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAge" />

            <TextView
                android:id="@+id/tvGender"
                style="@style/text_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/space_medium"
                android:text="@string/gender"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etAge" />

            <TextView
                android:id="@+id/etGender"
                style="@style/text_small"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_et_primary"
                android:gravity="center"
                android:paddingVertical="@dimen/space_small"
                android:text="@string/gender"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvGender" />

            <TextView
                android:id="@+id/tvSport"
                style="@style/text_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/space_medium"
                android:text="@string/sport"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etGender" />

            <TextView
                android:id="@+id/etSport"
                style="@style/text_small"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_et_primary"
                android:gravity="center"
                android:paddingVertical="@dimen/space_small"
                android:text="@string/gender"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSport" />


<!--            <Button-->
<!--                android:id="@+id/btnProfile"-->
<!--                style="@style/btn_primary"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginHorizontal="@dimen/space_large"-->
<!--                android:layout_marginVertical="@dimen/space_large"-->
<!--                android:text="@string/profile_creating"-->
<!--                android:textAllCaps="true"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/etSport" />-->
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>